API Zugriff Team Deaktivieren/Aktivieren / STI User - User::Api
Authentifizierung via API für Benutzer freischalten/deaktivieren

fix bruteforce detector tests

fixtures, locales for api settings, bugs

tests authentifizierung freischalten/deaktivieren

fix capybara tests

delete apikeys with user, fix capybara

revised fixtures, delete user with keys test

Authentifizierung inkl. anti Brute-Force

API Endpoint Groups Teams

CRUD Actions Account API, search identifier

rubocop fix and unlock api

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -192,6 +192,10 @@ de:
           toggle:
             empowered: "%{username} hat nun Admin-Rechte"
             disempowered: "Dem Benutzer %{username} wurden die Admin-Rechte entzogen"
+      user_settings:
+        toggle:
+          activated: "Api Zugang ist aktiviert"
+          deactivated: "Api Zugang ist deaktiviert"
       members:
         added: "%{username} wurde erfolgreich hinzugefügt"
         removed: "%{username} wurde erfolgreich entfernt"
